--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -534,13 +534,13 @@ header {
     text-transform: none;
 }
 
-#getLevel3 .title-bar {
+ .title-bar {
     border-left: solid 5px var(--color-orange-1);
     padding: .5rem 1rem;
     margin: .5rem 0 1.5rem;
 }
 
-#getLevel3 .title-bar h2 {
+ .title-bar h2 {
     text-transform: uppercase;
     font-family: var(--font-roboto-cond);
     font-weight: 400;
@@ -555,11 +555,14 @@ header {
     line-height: 1.5;
 }
 
+#page4level .level-box,
 #getLevel3 .col .level-box,
 #day5Development .col .level-box {
     border-left: solid 5px var(--color-blue-2);
 }
 
+#page4level .level-box h3,
+#page4level .level-box h2,
 #getLevel3 .col .level-box h3,
 #getLevel3 .col .level-box h2,
 #day5Development h3,
@@ -567,6 +570,9 @@ header {
     text-transform: uppercase;
 }
 
+#page4level .level-box p,
+#page4level .level-box h2,
+#page4level .level-box h3,
 #getLevel3 .col .level-box p,
 #getLevel3 .col .level-box h2,
 #getLevel3 .col .level-box h3,
@@ -575,7 +581,7 @@ header {
 #day5Development .level-box h3{
     padding: .5rem 1rem;
 }
-
+#page4level .level-box .blue-highlight,
 #getLevel3 .col .level-box .blue-highlight,
 #day5Development .level-box .blue-highlight {
     background: var(--color-blue-1);
@@ -583,12 +589,19 @@ header {
     border-radius: 0 5px 5px 0
 }
 
+#page4level .level-box .content-2,
 #getLevel3 .col .level-box .content-2,
 #day5Development .level-box .content-2 {
     background: var(--color-yellow-1);
     color: var(--color-blue-2);
     border-radius: 0 5px 5px 0;
     padding-bottom: 1.5rem;
+}
+
+#page4level .level-box span {
+    font-size: 30px;
+    font-weight: 500;
+    color: var(--color-blue-2);
 }
 
 #day5Development .level-box .content-2 ol {
@@ -798,6 +811,8 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
 }
 
 #targetTool .row-2x img {
@@ -893,6 +908,106 @@ header {
     padding: 1.5rem;
     margin: 0 -1rem;
 }
+
+
+
+/* Page 4 Settings */
+
+#betterPath {
+    position: relative;
+    background: var(--color-blue-2);
+    color: var(--color-white-1);
+    margin: 8rem 0 16rem;
+    padding: 6rem 0 16rem;
+}
+
+#betterPath h2 {
+    color: var(--color-orange-1)
+}
+
+#uncoverBusiness {
+    position: relative;
+    background: var(--color-blue-1);
+    color: var(--color-white-1);
+    margin:4rem 0 10rem;
+    padding: 4rem 0 8rem;
+}
+
+#uncoverBusiness h2,
+#uncoverBusiness h3,
+#uncoverBusiness h4 {
+    color: var(--color-white-1);
+}
+
+#uncoverBusiness .pop-content {
+    background: var(--color-orange-1);
+}
+
+
+.spot__wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(7, auto);
+    grid-column-gap: 16px;
+    grid-row-gap: 16px;
+}
+
+.spot__wrapper .img-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 250px;
+}
+
+.spot__wrapper img {
+    width: 250px;
+    object-fit: contain;
+    object-position: center;
+}
+
+.spot__wrapper .content {
+    display: flex;
+    gap: 1rem;
+    margin: 1rem 0;
+    padding-right: .8rem;
+}
+
+.spot__wrapper .content span {
+    font-size: 20px;
+
+}
+
+.spot__wrapper .content p {
+    line-height: 1.5;
+    font-family: var(--font-work);
+    color: var(--color-blue-2);
+}
+
+.spot__wrapper .card1 { grid-area: 1 / 1 / 2 / 2; }
+.spot__wrapper .card2 { grid-area: 1 / 2 / 2 / 3; }
+.spot__wrapper .card3 { grid-area: 2 / 1 / 3 / 2; }
+.spot__wrapper .card4 { grid-area: 2 / 2 / 4 / 3; }
+.spot__wrapper .card5 { grid-area: 3 / 1 / 4 / 2; }
+.spot__wrapper .card6 { grid-area: 4 / 1 / 5 / 3; }
+
+
+#choosingStrategy {
+    background: var(--color-blue-2);
+    color: var(--color-white-1);
+    padding: 3rem 0;
+    margin: 3rem 0;
+}
+
+#choosingStrategy h2{
+    color: var(--color-orange-1);
+}
+
+.white-end {
+    background: var(--color-white-1);
+    color: var(--color-blue-2);
+    padding: 1rem 1.5rem;
+}
+
 
 /* page 5 section after 1*/
 #page5After1 {
@@ -1154,6 +1269,32 @@ footer span {
         padding: 48rem 0 10rem;
         margin: 32rem 0 20rem;
     }
+
+    /*Page 4 Mobile */
+    .spot__wrapper{
+        display: flex;
+        flex-direction: column;
+        padding: 1rem;
+    }
+
+    #firstPage4 {
+        margin-top: 15rem;
+    }
+
+    #betterPath {
+        margin: 8rem 0 30rem;
+        padding: 12rem 0 30rem;
+    }
+
+    #uncoverBusiness {
+        margin: 4rem 0 15rem;
+        padding: 4rem 0 15rem;
+    }
+
+    boxed-content.p2 {
+        padding: 1rem;
+    }
+
 
     /* page 5 section after 1*/
     #page5After1 {
